--- a/back/app/package.json
+++ b/back/app/package.json
@@ -18,6 +18,8 @@
   },
   "homepage": "https://github.com/philippe-jonathan/alten-shop-back-products/back#readme",
   "dependencies": {
-    "express": "^4.18.2"
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2",
+    "mysql2": "^3.6.5"
   }
 }
