--- a/back/app/package.json
+++ b/back/app/package.json
@@ -2,10 +2,10 @@
   "name": "app",
   "version": "1.0.0",
   "description": "API for alten-shop",
-  "main": "index.js",
+  "main": "src/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node index.js"
+    "start": "node src/index.js"
   },
   "repository": {
     "type": "git",
