--- a/back/app/package.json
+++ b/back/app/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/philippe-jonathan/alten-shop-back-products/back#readme",
   "dependencies": {
+    "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "mysql2": "^3.6.5"
